# CircuitPython_keypadi2c

./: LICENSE  README.md  README.rst  README.rst.license  keypadi2c.py  pyproject.toml  requirements.txt
examples/: keypadi2c_multiple_expanders.py  keypadi2c_single_expander.py
