# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2022 River Wang
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-keypadi2c"
description = "A CircuitPython keypad library that supports MCP I2C IO expanders."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/urfdvw/CircuitPython_keypadi2c"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "keypadi2c",
    "keypad",
    "circuitpython",
    "i2c",
    "keyboard",
    "ioexpander",
    "expander",
    "mcp23017",
    "mcp23008",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["keypadi2c"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
